# simple_blog

./: .env.dist  .gitignore  README.md  manage.py  pyproject.toml
api/: decorators.py  urls.py  yasg.py
posts/: admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
simple_blog/: asgi.py  settings.py  wsgi.py
users/: serializers.py  urls.py  views.py
